Fix alignment of page size; remove type column (SAAS-411)

--- a/assets/sass/blocks/pagination.scss
+++ b/assets/sass/blocks/pagination.scss
@@ -17,6 +17,11 @@
     .column {
         width: 25%;
         float: left;
+        padding-top: 6px;
+
+        &.right {
+            text-align: right;
+        }
     }
 
     .body {
